--- a/public/themes/simpleboot3/public/assets/style/css/index.css
+++ b/public/themes/simpleboot3/public/assets/style/css/index.css
@@ -762,12 +762,15 @@ body {
     margin-left: 0.44rem;
     font-weight: bolder;
 }
-.index-news .index-news-box .item .more-btn a{
-	color: #FF5000;
+
+.index-news .index-news-box .item .more-btn a {
+    color: #FF5000;
 }
-.index-news .index-news-box .item:hover a{
-	color: #FFFFFF;
+
+.index-news .index-news-box .item:hover a {
+    color: #FFFFFF;
 }
+
 .index-news .index-news-box .more-btn {
     border-radius: 2px;
 }
@@ -787,19 +790,23 @@ body {
 
 .index-news .index-news-box .item:first-child .more-btn {
     background: #FF5000;
-    
+
 }
-.index-news .index-news-box .item:first-child .more-btn a{
-	color: #FFFFFF;
+
+.index-news .index-news-box .item:first-child .more-btn a {
+    color: #FFFFFF;
 }
+
 .index-news .more {
     text-align: center;
     margin-top: 0.71rem;
 }
-.index-news .more a{
-	color: #FF5000;
-	font-size: 0.25rem;
+
+.index-news .more a {
+    color: #FF5000;
+    font-size: 0.25rem;
 }
+
 /* 合作客户 */
 .index-customer {
     padding: 1.78rem 0;
@@ -845,10 +852,12 @@ body {
     text-align: center;
     margin-top: 0.71rem;
 }
-.index-customer .more a{
+
+.index-customer .more a {
     color: #FF5000;
     font-size: 0.25rem;
 }
+
 /* 解决方案按钮 */
 .index-bottom {
     padding: 1.78rem 0;
@@ -1720,9 +1729,11 @@ body {
     background: url(../imgs/application/banner.png) center center no-repeat;
     background-size: 100% 100%;
 }
+
 .application .index-banner-top {
     font-size: 0.85rem;
 }
+
 .application .application-box {
     padding: 1.78rem 0;
     background: #FFFFFF;
@@ -1738,7 +1749,7 @@ body {
 .application .application-box .box-1 img {
     display: block;
     padding: 0.35rem;
-	width: 100%;
+    width: 100%;
 }
 
 .application .application-box .box-1 .flex-box {
@@ -1779,6 +1790,10 @@ body {
     display: flex;
 }
 
+.crm {
+    padding-right: 2rem;
+}
+
 .application .application-box .box-2 .right .item {
     width: 2.67rem;
     text-align: center;
@@ -1790,7 +1805,7 @@ body {
 .application .application-box .box-2 .right .item img {
     display: block;
     width: 2.67rem;
-    height: 2.67rem;
+    /* height: 2.67rem; */
     margin-bottom: 0.35rem;
 }
 
@@ -1804,7 +1819,7 @@ body {
 .application .application-box .box-3 img {
     display: block;
     padding: 0.35rem;
-	width: 100%;
+    width: 100%;
 }
 
 .application .application-box .box-3 .flex-box {
@@ -2985,9 +3000,11 @@ label {
         background: url(../imgs/application/banner-phone.png) center center no-repeat;
         background-size: 100% 100%;
     }
-	.application .index-banner-top {
-		font-size: 1.6rem;
-	}
+
+    .application .index-banner-top {
+        font-size: 1.6rem;
+    }
+
     .application .application-box {
         padding: 0;
     }
