--- a/public/themes/simpleboot3/public/assets/style/css/index.css
+++ b/public/themes/simpleboot3/public/assets/style/css/index.css
@@ -1790,9 +1790,9 @@ body {
     display: flex;
 }
 
-.crm {
-    padding-right: 2rem;
-}
+/* .crm {
+    padding-right: 1rem;
+} */
 
 .application .application-box .box-2 .right .item {
     width: 2.67rem;
@@ -1853,6 +1853,19 @@ body {
     border-radius: 5px;
 }
 
+
+.application .flex-box-2 .box-2 .left img {
+    width: 5.5556rem;
+    height: 5.2407rem;
+}
+
+.application .flex-box-2 .box-2 .right {
+    padding-right: 1.5rem;
+}
+
+.application .flex-box-2 .crm {
+    margin-left: .1852rem;
+}
 
 /* 预约方案 */
 
