--- a/public/themes/simpleboot3/public/assets/style/css/index.css
+++ b/public/themes/simpleboot3/public/assets/style/css/index.css
@@ -2437,9 +2437,11 @@ label {
         width: 23rem;
         height: 3.6rem;
         line-height: 3.6rem;
-        font-size: 0.93rem;
+        
     }
-
+	.index-bottom .solution-btn a{
+		font-size: 0.93rem;
+	}
     /* 合伙人计划页面 */
     .partner .index-banner-top {
         margin-top: 50px;
