--- a/public/themes/simpleboot3/public/assets/style/css/index.css
+++ b/public/themes/simpleboot3/public/assets/style/css/index.css
@@ -2429,7 +2429,7 @@ label {
         height: 4.8rem;
     }
 
-    .index-customer .more {
+    .index-customer .more a{
         font-size: 0.93rem;
     }
 
