--- a/public/themes/simpleboot3/public/assets/style/css/reset.css
+++ b/public/themes/simpleboot3/public/assets/style/css/reset.css
@@ -23,7 +23,7 @@
 }
 
 .nav-header {
-	padding: 0 1rem;
+	/* padding: 0 1rem; */
     /* width: 100%; */
     background: #FF5000!important;
     height: 1.42rem;
