--- a/public/themes/simpleboot3/public/assets/style/css/common.css
+++ b/public/themes/simpleboot3/public/assets/style/css/common.css
@@ -98,6 +98,7 @@ body {
     line-height: 1.42rem;
     /* overflow: hidden; */
     margin: 0 auto;
+	position: relative;
 }
 
 .header-box .img-logo {
@@ -141,7 +142,7 @@ body {
 
 /* 顶部隐藏 */
 .nav-box {
-    position: relative;
+    /* position: relative; */
 }
 
 .nav-box .gengduo {
@@ -192,7 +193,7 @@ body {
 .menu-dropdown {
     position: absolute;
     width: 100%;
-    top: 60px;
+    top: 1.42rem;
     left: 0;
     right: 0;
     line-height: 1;
@@ -215,7 +216,7 @@ body {
 }
 
 .menu-dropdown-wrapper {
-    height: 232px;
+    height: 360px;
     width: 1200px;
     margin: 0 auto;
     overflow: hidden;
@@ -304,6 +305,8 @@ body {
 
 .nav-item-text-item li {
     line-height: 0.7rem !important;
+	padding: 0 0 !important;
+	width: 25%;
 }
 
 .menu-dropdown-wrapper ul {
