--- a/public/themes/simpleboot3/public/assets/style/css/index.css
+++ b/public/themes/simpleboot3/public/assets/style/css/index.css
@@ -161,10 +161,19 @@ body {
 }
 
 .index-product .index-product-item .index-product-item-innerbox2 .text {
+	width: 100%;
+	display: block;
     color: #999999;
     font-size: 0.21rem;
     line-height: 0.53rem;
     text-align: justify;
+	text-overflow: -o-ellipsis-lastline;
+	overflow: hidden;	
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-line-clamp: 2;	
+	line-clamp: 2;					
+	-webkit-box-orient: vertical;
 }
 
 .index-product .index-product-item .index-product-item-innerbox2 .img {
