--- a/public/themes/simpleboot3/public/assets/style/css/common.css
+++ b/public/themes/simpleboot3/public/assets/style/css/common.css
@@ -32,7 +32,7 @@ body {
 }
 
 .bgg {
-    background-color: #ff5000;
+    background-color: var(--color-primary);
     padding: 0.5rem 0 1rem;
 }
 
@@ -41,7 +41,7 @@ body {
 }
 
 .col {
-    color: #FF5000;
+    color: var(--color-primary);
 }
 
 .col-green {
@@ -125,7 +125,7 @@ body {
 }
 
 .header-fixed-box {
-    background: #FF5000;
+    background: var(--color-primary);
 }
 
 .header-fixed-box .img-logo {
@@ -252,7 +252,7 @@ body {
 }
 
 .nav-item-text .nav-item-text-list li.col a {
-    color: #ff5000 !important;
+    color: var(--color-primary) !important;
 }
 
 .index-banner {
@@ -288,7 +288,7 @@ body {
 }
 
 .nav-item-title .title-active {
-    color: #ff5000;
+    color: var(--color-primary);
 }
 
 .nav-item-text .nav-item-text-list {
