--- a/public/themes/simpleboot3/public/assets/style/css/product.css
+++ b/public/themes/simpleboot3/public/assets/style/css/product.css
@@ -82,7 +82,7 @@
 }
 
 .problem .list .item_title {
-    color: rgba(255, 80, 0, 1);
+    color: var(--color-primary);
     font-size: 0.36rem;
     text-align: left;
     font-weight: bold;
@@ -145,7 +145,7 @@
 	height: 0.96rem;
 	line-height: 0.96rem;
 	border-radius: 0.09rem;
-	background-color: rgba(255, 80, 0, 1);
+	background-color: var(--color-primary);
 	text-align: center;
 	color: rgba(255, 255, 255, 1);
 	font-size: 0.25rem;
@@ -359,7 +359,7 @@
 	height: 0.96rem;
 	line-height: 0.96rem;
 	border-radius: 0.09rem;
-	background-color: rgba(255, 80, 0, 1);
+	background-color: var(--color-primary);
 	text-align: center;
 	color: rgba(255, 255, 255, 1);
 	font-size: 0.25rem;
@@ -441,7 +441,7 @@
 	}
 	
 	.problem .list .item_title {
-	    color: rgba(255, 80, 0, 1);
+	    color: var(--color-primary);
 	    font-size: 1.07rem;
 	    text-align: left;
 	    font-weight: bold;
@@ -506,7 +506,7 @@
 		height: 3.33rem;
 		line-height: 3.33rem;
 		border-radius: 0.33rem;
-		background-color: rgba(255, 80, 0, 1);
+		background-color: var(--color-primary);
 		text-align: center;
 	}
 	.ourproduct button img{
@@ -699,7 +699,7 @@
 		height: 3.6rem;
 		line-height: 3.6rem;
 		border-radius: 0.33rem;
-		background-color: rgba(255, 80, 0, 1);
+		background-color: var(--color-primary);
 		text-align: center;
 		color: rgba(255, 255, 255, 1);
 		font-size: 0.93rem;
