--- a/public/themes/simpleboot3/public/assets/style/css/reset.css
+++ b/public/themes/simpleboot3/public/assets/style/css/reset.css
@@ -25,13 +25,13 @@
 .nav-header {
 	/* padding: 0 1rem; */
     /* width: 100%; */
-    background: #FF5000!important;
+    background: var(--color-primary)!important;
     height: 1.42rem;
     /* position: relative; */
 }
 
 .navbar-default {
-    background-color: #ff5000;
+    background-color: var(--color-primary);
     border: none;
 }
 
@@ -46,7 +46,7 @@
 
 .navbar-default .navbar-toggle:focus,
 .navbar-default .navbar-toggle:hover {
-    background: #ff5000;
+    background: var(--color-primary);
 }
 
 .navbar-default .navbar-toggle .icon-bar {
