--- a/public/themes/simpleboot3/public/assets/style/css/solution.css
+++ b/public/themes/simpleboot3/public/assets/style/css/solution.css
@@ -224,7 +224,7 @@ overflow-x: hidden;
 	display: none;
 }
 .list .content .content_left{
-	color: rgba(255, 80, 0, 1);
+	color: var(--color-primary);
 	font-size: 0.857143rem;
 	font-weight: bold;
 }
@@ -269,7 +269,7 @@ overflow-x: hidden;
 	height: 0.964286rem;
 	line-height: 0.964286rem;
 	border-radius: 0.089286rem;
-	background-color: rgba(255, 80, 0, 1);
+	background-color: var(--color-primary);
 	text-align: center;
 	color: rgba(255, 255, 255, 1);
 	font-size: 0.25rem;
@@ -346,7 +346,7 @@ overflow-x: hidden;
 	margin-bottom: 0.18rem;
 }
 .solution_customer .next{
-	color: rgba(255, 80, 0, 1);
+	color: var(--color-primary);
 	font-size: 0.25rem;
 	text-align: center;
 	margin-top: 0.89rem;
@@ -358,7 +358,7 @@ overflow-x: hidden;
 	opacity: 0.9;
 	border-radius: 0.089286rem;
 	background: rgba(250, 250, 250, 1);
-	color: rgba(255, 80, 0, 1);
+	color: var(--color-primary);
 	font-size: 0.285714rem;
 	text-align: center;
 	display: none;
@@ -584,7 +584,7 @@ overflow-x: hidden;
 	}
 	.solution_advantage .list .item .item_top{
 		width: 100%;
-		color: rgba(255, 80, 0, 1);
+		color: var(--color-primary);
 		font-size: 1.33rem;
 		text-align: center;
 		font-weight: bold;
@@ -681,7 +681,7 @@ overflow-x: hidden;
 		height: 3.6rem;
 		line-height: 3.6rem;
 		border-radius: 0.33rem;
-		background-color: rgba(255, 80, 0, 1);
+		background-color: var(--color-primary);
 		text-align: center;
 		color: rgba(255, 255, 255, 1);
 		font-size: 0.93rem;
@@ -720,7 +720,7 @@ overflow-x: hidden;
 		height: 3.33rem;
 	}
 	.solution_customer .next{
-		color: rgba(255, 80, 0, 1);
+		color: var(--color-primary);
 		font-size: 0.8rem;
 		text-align: center;
 		margin-top: 1.33rem;
